# Jake-The-Dog

./: .env  README.md  SpotipyClientID.txt  SpotipyClientSecret.txt  appspec.yml  conversion.py  conversions.py  main.py  prefixes.json  pyproject.toml  requirements.txt
cogs/: Entertainment.py  Fun.py  Games.py  Help.py  Minecraft.py  Moderation.py  Music.py  NSFW.py  Owner.py  Pokemon.py  Reddit.py  Utility.py  VCGames.py
cogs/TruthOrDare/: dare.json  truth.json
config/: activities-archived.yaml  activities.yaml  choices.json  pun.json  tord.json
env/Scripts/: activate  activate.bat
