[tool.poetry]
name = "repl_python3_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
discord = "^1.0.1"
"discord.py" = "^1.7.1"
PyNaCl = "^1.4.0"
python-dotenv = "^0.17.0"
python-decouple = "^3.4"
youtube-dl = "^2021.4.17"
ffmpeg = "^1.4"
async-timeout = "^3.0.1"
utils = "^1.0.1"
Pillow = "^8.2.0"
DateTime = "^4.3"
bs4 = "^0.0.1"
scripts = "^2.0"
redis = "^3.5.3"
praw = "^7.2.0"
aiohttp = "^3.7.4"
google = "^3.0.0"
google-images-search = "^1.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
